# matplotlib-animation

./: LICENSE  README.md  pyproject.toml  setup.py
animation/: __init__.py  animation.py
scripts/: demo.py
