[build-system]
requires = ["setuptools", "matplotlib"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib-animation"
version = "0.0.1"
authors = [
  { name="Szymon Wojciechowski", email="szymon.wojciechowski@pwr.edu.pl" },
]
description = "Animation class based on `matplotlib` and ImageMagick."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/w4k2"